// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`relay example schema generates expected schema 1`] = `
"type Answer {
  count: Int!
  id: ID!
  value: String!
}

type BatchNumber implements Node {
  id: ID!
  number: Int!
}

\\"\\"\\"input type\\"\\"\\"
input CustomInputName {
  clientMutationId: ID!
  id: ID!
}

\\"\\"\\"output type\\"\\"\\"
type CustomOutputName {
  clientMutationId: ID!
  itWorked: Boolean!
}

input ExampleMutationInput {
  clientMutationId: ID!
  id: ID!
}

type ExampleMutationPayload {
  clientMutationId: ID!
  itWorked: Boolean!
}

input GlobalIDInput {
  circular: GlobalIDInput
  circularWithoutGlobalIds: NoGlobalIDInput
  id: ID!
  idList: [ID!]!
}

type Mutation {
  answerPoll(answer: Int!, id: ID!): Poll!
  createPoll(answers: [String!]!, question: String!): Poll!
  exampleMutation(input: ExampleMutationInput!): ExampleMutationPayload!

  \\"\\"\\"mutation field\\"\\"\\"
  exampleWithDescriptions(customInput: CustomInputName!): CustomOutputName!
}

input NoGlobalIDInput {
  circular: NoGlobalIDInput
  id: ID
}

interface Node {
  id: ID!
}

type Number implements Node {
  id: ID!
  number: Int!
}

type PageInfo {
  endCursor: String
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String
}

type Poll implements Node {
  answers: [Answer!]!
  answersConnection(after: ID, before: ID, first: Int, last: Int): PollAnswersConnection!
  answersUsingOffset(after: ID, before: ID, first: Int, last: Int): PollAnswersUsingOffsetConnection!
  answersWithoutHelpers(after: ID, before: ID, first: Int, last: Int): PollAnswersCon!
  id: ID!
  question: String!
  updatedAt: String!
}

type PollAnswersCon {
  edges: [PollAnswersConEdge]!
  pageInfo: PageInfo!
}

type PollAnswersConEdge {
  cursor: String!
  node: Answer!
}

type PollAnswersConnection {
  edges: [PollAnswersConnectionEdge]!
  pageInfo: PageInfo!
}

type PollAnswersConnectionEdge {
  cursor: String!
  node: Answer!
}

type PollAnswersUsingOffsetConnection {
  edges: [PollAnswersUsingOffsetConnectionEdge]!
  pageInfo: PageInfo!
}

type PollAnswersUsingOffsetConnectionEdge {
  cursor: String!
  node: Answer!
}

type Query {
  batchNumbers(after: ID, before: ID, first: Int, last: Int): QueryBatchNumbersConnection!
  extraNode: Node
  inputGlobalID(id: ID!, inputObj: GlobalIDInput!, normalId: ID!): String!
  moreNodes: [Node]!
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]!
  numbers(after: ID, before: ID, first: Int, last: Int): QueryNumbersConnection!
  poll(id: Int!): Poll
  pollIds: [ID!]!
  polls: [Poll!]!
  pollsConnection(after: ID, before: ID, first: Int, last: Int): QueryPollsConnection!
  sharedConnection(after: ID, before: ID, first: Int, last: Int): SharedConnection
}

type QueryBatchNumbersConnection {
  connectionField: Int
  edges: [QueryBatchNumbersConnectionEdge]!
  pageInfo: PageInfo!
}

type QueryBatchNumbersConnectionEdge {
  cursor: String!
  edgeField: Int
  node: BatchNumber!
}

type QueryNumbersConnection {
  edges: [QueryNumbersConnectionEdge]!
  pageInfo: PageInfo!
}

type QueryNumbersConnectionEdge {
  cursor: String!
  node: Number!
}

type QueryPollsConnection {
  edges: [QueryPollsConnectionEdge]!
  extraConnectionField: String!
  pageInfo: PageInfo!
}

type QueryPollsConnectionEdge {
  cursor: String!
  extraEdgeField: Int!
  node: Poll!
}

type SharedConnection {
  edges: [SharedEdge]!
  pageInfo: PageInfo!
}

type SharedEdge {
  cursor: String!
  node: Number!
}
"
`;

exports[`relay example schema generates expected schema with globalConnectionFields 1`] = `
"type Answer {
  count: Int!
  id: ID!
  value: String!
}

type BatchNumber implements Node {
  id: ID!
  number: Int!
}

\\"\\"\\"input type\\"\\"\\"
input CustomInputName {
  id: ID!
}

\\"\\"\\"output type\\"\\"\\"
type CustomOutputName {
  itWorked: Boolean!
}

input ExampleMutationInput {
  id: ID!
}

type ExampleMutationPayload {
  itWorked: Boolean!
}

input GlobalIDInput {
  circular: GlobalIDInput
  circularWithoutGlobalIds: NoGlobalIDInput
  id: ID!
  idList: [ID!]!
}

type Mutation {
  answerPoll(answer: Int!, id: ID!): Poll!
  createPoll(answers: [String!]!, question: String!): Poll!
  exampleMutation(
    \\"\\"\\"mutation input arg\\"\\"\\"
    input: ExampleMutationInput!
  ): ExampleMutationPayload!

  \\"\\"\\"mutation field\\"\\"\\"
  exampleWithDescriptions(
    \\"\\"\\"mutation input arg\\"\\"\\"
    customInput: CustomInputName!
  ): CustomOutputName!
}

input NoGlobalIDInput {
  circular: NoGlobalIDInput
  id: ID
}

\\"\\"\\"node type\\"\\"\\"
interface Node {
  id: ID!
}

type Number implements Node {
  id: ID!
  number: Int!
}

\\"\\"\\"page info type\\"\\"\\"
type PageInfo {
  endCursor: String
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String
}

type Poll implements Node {
  answers: [Answer!]!
  answersConnection(after: String, before: String, first: Int, last: Int): PollAnswersConnection!
  answersUsingOffset(after: String, before: String, first: Int, last: Int): PollAnswersUsingOffsetConnection!
  answersWithoutHelpers(after: String, before: String, first: Int, last: Int): PollAnswersCon!
  id: ID!
  question: String!
  updatedAt: String!
}

type PollAnswersCon {
  edges: [PollAnswersConEdge]!
  pageInfo: PageInfo!
  totalCount: Int!
  totalCount2: Int!
}

type PollAnswersConEdge {
  cursor: String!
  node: Answer!
}

type PollAnswersConnection {
  edges: [PollAnswersConnectionEdge]!
  pageInfo: PageInfo!
  totalCount: Int!
  totalCount2: Int!
}

type PollAnswersConnectionEdge {
  cursor: String!
  node: Answer!
}

type PollAnswersUsingOffsetConnection {
  edges: [PollAnswersUsingOffsetConnectionEdge]!
  pageInfo: PageInfo!
  totalCount: Int!
  totalCount2: Int!
}

type PollAnswersUsingOffsetConnectionEdge {
  cursor: String!
  node: Answer!
}

type Query {
  batchNumbers(after: String, before: String, first: Int, last: Int): QueryBatchNumbersConnection!
  extraNode: Node
  inputGlobalID(id: ID!, inputObj: GlobalIDInput!, normalId: ID!): String!
  moreNodes: [Node]!

  \\"\\"\\"node query\\"\\"\\"
  node(id: ID!): Node

  \\"\\"\\"nodes query\\"\\"\\"
  nodes(ids: [ID!]!): [Node]!
  numbers(after: String, before: String, first: Int, last: Int): QueryNumbersConnection!
  poll(id: Int!): Poll
  pollIds: [ID!]!
  polls: [Poll!]!
  pollsConnection(after: String, before: String, first: Int, last: Int): QueryPollsConnection!
  sharedConnection(after: String, before: String, first: Int, last: Int): SharedConnection
}

type QueryBatchNumbersConnection {
  edges: [QueryBatchNumbersConnectionEdge]!
  pageInfo: PageInfo!
  totalCount: Int!
  totalCount2: Int!
}

type QueryBatchNumbersConnectionEdge {
  cursor: String!
  node: BatchNumber!
}

type QueryNumbersConnection {
  edges: [QueryNumbersConnectionEdge]!
  pageInfo: PageInfo!
  totalCount: Int!
  totalCount2: Int!
}

type QueryNumbersConnectionEdge {
  cursor: String!
  node: Number!
}

type QueryPollsConnection {
  edges: [QueryPollsConnectionEdge]!
  extraConnectionField: String!
  pageInfo: PageInfo!
  totalCount: Int!
  totalCount2: Int!
}

type QueryPollsConnectionEdge {
  cursor: String!
  extraEdgeField: Int!
  node: Poll!
}

type SharedConnection {
  edges: [SharedEdge]!
  pageInfo: PageInfo!
  totalCount: Int!
  totalCount2: Int!
}

type SharedEdge {
  cursor: String!
  node: Number!
}
"
`;

exports[`relay example schema queries query array based connections 1`] = `
Object {
  "data": Object {
    "batchNumbers": Object {
      "connectionField": 3,
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
          "edgeField": 0,
          "node": Object {
            "number": 0,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjox",
          "edgeField": 1,
          "node": Object {
            "number": 1,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
          "edgeField": 2,
          "node": Object {
            "number": 2,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
      },
    },
    "beforeAndAfter": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo4",
          "node": Object {
            "number": 8,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
          "node": Object {
            "number": 9,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjo4",
      },
    },
    "firstAfter": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
          "node": Object {
            "number": 2,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoz",
          "node": Object {
            "number": 3,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
          "node": Object {
            "number": 4,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
      },
    },
    "firstAfterAtEnd": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTg=",
          "node": Object {
            "number": 198,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTk=",
          "node": Object {
            "number": 199,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTk=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTg=",
      },
    },
    "firstAndLast": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoz",
          "node": Object {
            "number": 3,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
          "node": Object {
            "number": 4,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjoz",
      },
    },
    "lastAtBegining": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
          "node": Object {
            "number": 0,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
      },
    },
    "lastBefore": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo3",
          "node": Object {
            "number": 7,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo4",
          "node": Object {
            "number": 8,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
          "node": Object {
            "number": 9,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjo3",
      },
    },
  },
}
`;

exports[`relay example schema queries query node and nodes on query type 1`] = `
Object {
  "data": Object {
    "batchNode": Object {
      "number": 0,
    },
    "extraNode": Object {
      "__typename": "Number",
      "number": 2,
    },
    "moreNodes": Array [
      Object {
        "__typename": "Number",
        "number": 2,
      },
      Object {
        "__typename": "Number",
        "number": 10,
      },
    ],
    "node": Object {
      "id": "TnVtYmVyOjI=",
      "number": 2,
    },
    "node2": Object {
      "number": 2,
    },
    "nodes": Array [
      Object {
        "number": 4,
      },
      Object {
        "number": 2,
      },
      Object {
        "number": 2,
      },
      Object {
        "batchNumber": 0,
      },
    ],
  },
}
`;

exports[`relay example schema queries query offset based connections 1`] = `
Object {
  "data": Object {
    "beforeAndAfter": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo4",
          "node": Object {
            "number": 8,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
          "node": Object {
            "number": 9,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjo4",
      },
    },
    "firstAfter": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
          "node": Object {
            "number": 2,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoz",
          "node": Object {
            "number": 3,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
          "node": Object {
            "number": 4,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
      },
    },
    "firstAfterAtEnd": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTg=",
          "node": Object {
            "number": 198,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTk=",
          "node": Object {
            "number": 199,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTk=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOTg=",
      },
    },
    "firstAndLast": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoz",
          "node": Object {
            "number": 3,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
          "node": Object {
            "number": 4,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjoz",
      },
    },
    "lastAtBegining": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
          "node": Object {
            "number": 0,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
      },
    },
    "lastBefore": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo3",
          "node": Object {
            "number": 7,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo4",
          "node": Object {
            "number": 8,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
          "node": Object {
            "number": 9,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjo3",
      },
    },
    "numbers": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
          "node": Object {
            "number": 0,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjox",
          "node": Object {
            "number": 1,
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
          "node": Object {
            "number": 2,
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
      },
    },
    "sharedConnection": Object {
      "edges": Array [
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjow",
          "node": Object {
            "id": "TnVtYmVyOjA=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjox",
          "node": Object {
            "id": "TnVtYmVyOjE=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoy",
          "node": Object {
            "id": "TnVtYmVyOjI=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoz",
          "node": Object {
            "id": "TnVtYmVyOjM=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo0",
          "node": Object {
            "id": "TnVtYmVyOjQ=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo1",
          "node": Object {
            "id": "TnVtYmVyOjU=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo2",
          "node": Object {
            "id": "TnVtYmVyOjY=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo3",
          "node": Object {
            "id": "TnVtYmVyOjc=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo4",
          "node": Object {
            "id": "TnVtYmVyOjg=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjo5",
          "node": Object {
            "id": "TnVtYmVyOjk=",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxMA==",
          "node": Object {
            "id": "TnVtYmVyOjEw",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxMQ==",
          "node": Object {
            "id": "TnVtYmVyOjEx",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxMg==",
          "node": Object {
            "id": "TnVtYmVyOjEy",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxMw==",
          "node": Object {
            "id": "TnVtYmVyOjEz",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxNA==",
          "node": Object {
            "id": "TnVtYmVyOjE0",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxNQ==",
          "node": Object {
            "id": "TnVtYmVyOjE1",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxNg==",
          "node": Object {
            "id": "TnVtYmVyOjE2",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxNw==",
          "node": Object {
            "id": "TnVtYmVyOjE3",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOA==",
          "node": Object {
            "id": "TnVtYmVyOjE4",
          },
        },
        Object {
          "cursor": "T2Zmc2V0Q29ubmVjdGlvbjoxOQ==",
          "node": Object {
            "id": "TnVtYmVyOjE5",
          },
        },
      ],
    },
  },
}
`;
